--- a/index.html
+++ b/index.html
@@ -2,9 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="author" content="JINAREUM(jessica)">
+    <meta name="title" content="Jinareum's Portfolio">
+    <meta name="description" content="Jinareum's Portfolio">
+
+    <title>Jin Areum's Portfolio</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/slideheader.css">
+    <link rel="stylesheet" href="css/ptfl-moderntimes.css">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="js/index.js"></script>
+
 </head>
 <body>
-    Hello world!
+<header>
+    <div class="container-fluid navWrap" style="background:#242830;">
+        <div class="row conatiner">
+            <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2 main-nav" style="">
+                <ul>
+                    <li><a href="index.html">Home<span></span></a></li>
+                    <li><a href="#">About<span></span></a></li>
+                    <li><a href="#">Portfolio<span></span></a></li>
+                    <li><a href="#">Get in touch<span></span></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</header>
+<section class="modernWrap navCommon">
+    <div class="container nav-common-bg">
+        <div class="row">
+            <div class="col-md-12 nav-icon-bg">
+                <div id="navicon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="portPic">
+    <div class="container">
+        <div class="row pic-wrap">
+            <div class="col-md-12">
+                <h1>Modern times</h1>
+                <div class="row pic-content">
+                    <div class="col-md-6">
+                        사진넣기
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <span class="tool">Design &amp; Coding &amp; Responsive web</span><br>
+                            <span class="tool">Tool</span> : brackets , Git , Photoshop , Illustrator<br>
+                        </p>
+
+                        <h4>기획의도 및 컨셉</h4>
+                        <p>현대인의 공간에 휴식을 넘어 개인이 원하는 분위기를 반영한 공간을 만들기 위해 가구 소품 및 인테리어를 위한 회사입니다.<br>깔끔하면서 도시적인 느낌을 반영하여 세련된 느낌을 주도록 하였습니다.</p>
+
+                        <div class="btn-wrap">
+                            <button id="go-homepage">
+                                <a href="http://moderntimes.dothome.co.kr" target="_blank" >HOMEPAGE!</a>
+                            </button>&nbsp;
+
+                            <button id="go-homepage">
+                                <a href="https://drive.google.com/file/d/0B1Tox1e32K5GQU5CMzBIY3FjWHc/view" target="_blank" >Detailed plan</a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
