--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="faviico/favicon-16x16.png">
 <link rel="manifest" href="faviico/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="faviico/ms-icon-144x144.png">con_seoul
+<meta name="msapplication-TileImage" content="faviico/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 
 <link rel="stylesheet" type="text/css" href="css/all.css">
